# webapp-creator

./: README.md  apparmorEdit.cc  apparmorEdit.h  configEdit.cc  configEdit.h  desktopEdit.cc  desktopEdit.h  manifestEdit.cc  manifestEdit.h  qmlEdit.cc  qmlEdit.h
front-end_tests/: Readme.md  webapp-creator.jujuyeh_0.10_armhf.click  webapp-creator.jujuyeh_0.13_armhf.click  webapp-creator.jujuyeh_0.19_armhf.click  webapp-creator.jujuyeh_0.8_armhf.click  webapp-creator.jujuyeh_0.9_armhf.click
lib/: apparmorEdit.cc  apparmorEdit.h  configEdit.cc  configEdit.h  desktopEdit.cc  desktopEdit.h  libwebappcreator.cc  libwebappcreator.h  manifestEdit.cc  manifestEdit.h  qmlEdit.cc  qmlEdit.h
webapp-creator/: CMakeLists.txt  SharePage.qml  clickable.json  manifest.json.in  pageAbout.qml  pageInstallShare.qml  webapp-creator.apparmor
webapp-creator/app/: ImportPage.qml  InstallPage.qml  Main.qml  SharePage.qml  pageAbout.qml  pageInstallShare.qml  pageOgraWebapp.qml  webapp-creator.desktop.in
webapp-creator/app/tests/autopilot/: run
webapp-creator/app/tests/autopilot/webapp-creator/tests/: test_main.py
webapp-creator/app/tests/unit/: tst_main.qml
webapp-creator/backend/: CMakeLists.txt
webapp-creator/backend/modules/Webapp_Creator/: backend.cpp  backend.h  libwebappcreator.h  mytype.cpp  mytype.h  qmldir
webapp-creator/backend/tests/unit/: tst_mytype.qml
webapp-creator/cmake/: Click.cmake
webapp-creator/po/: ca.mo  ca.po  de.mo  de.po  es.mo  es.po  fr.mo  fr.po  webapp-creator.jujuyeh.pot
webapp-creator/tests/autopilot/webapp-creator/tests/: __init__.py
